# r3fit

r3fit/: Cargo.toml  README.md
r3fit-python/: README.md  pyproject.toml
r3fit-python/src/: circle.rs  lib.rs
r3fit/benches/: fit_bench.rs
r3fit/src/: lib.rs
