[package]
name = "r3fit"
license = "MIT"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/einstein8612/r3fit"
description = """
Simple RANSAC algorithm that uses 3 samples to estimate a circle over the given points.
"""

[dependencies]
rand = "0.9.1"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.6.0"

[[bench]]
name = "fit_bench"
harness = false